--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,6 @@ dependencies {
             'com.codeborne:pdf-test:1.7.0',
             'org.assertj:assertj-core:3.22.0',
             "io.qameta.allure:allure-selenide:$allureVersion",
-            'com.github.javafaker:javafaker:1.0.2',
             "com.codeborne:selenide:$selenideVersion",
             "org.junit.jupiter:junit-jupiter:$junitVersion")
 
@@ -63,25 +62,16 @@ tasks.withType(Test) {
     }
 }
 
-/*
-//@Tag тесты regress
-task regress_tests(type: Test) {
-    useJUnitPlatform{
-        includeTags "regress"
-    }
-}
- */
-
-//@Tag тесты для раздела Маркет
-task market_tests(type: Test) {
-    useJUnitPlatform{
-        includeTags "marketTests"
-    }
-}
-
-//тесты для раздела Сайт Компании
+//@Tag тесты для раздела Сайт Компании
 task site_tests(type: Test) {
     useJUnitPlatform{
         includeTags "siteTests"
+    }
+}
+
+//@Tag тесты для раздела example
+task example_tests(type: Test) {
+    useJUnitPlatform{
+        includeTags "exampleTests"
     }
 }
